# chwd

./: .clang-tidy  .gitignore  .luarc.json  CMakeLists.txt  Cargo.toml  README.md  build.rs  configure.sh  graphic_drivers-profiles-test.toml  i18n.toml  profile-raw-escaped-strings-test.toml  rustfmt.toml  sonar-project.properties
.github/workflows/: build.yml  lua.yml  rust.yml
chwd-rust/: Cargo.toml  build.rs
chwd-rust/src/: console_writer.rs  consts.rs  data.rs  device.rs  lib.rs  profile.rs
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
i18n/ar/: chwd.ftl
i18n/bg/: chwd.ftl
i18n/cs/: chwd.ftl
i18n/de/: chwd.ftl
i18n/el/: chwd.ftl
i18n/en/: chwd.ftl
i18n/ja/: chwd.ftl
i18n/ka/: chwd.ftl
i18n/pt-BR/: chwd.ftl
i18n/ru/: chwd.ftl
i18n/sk/: chwd.ftl
i18n/sv/: chwd.ftl
i18n/tr/: chwd.ftl
i18n/uk/: chwd.ftl
ids/: fprint.ids  intel-media-sdk.ids  intel-vaapi.ids  nouveau.ids  nvidia-390.ids  nvidia-470.ids  nvidia-580.ids  nvidia-latest-closed.ids
libhd/: Cargo.toml
libhd-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
libhd-sys/src/: lib.rs
libhd/examples/: example1.rs
libhd/src/: lib.rs
libmhwd/: CMakeLists.txt  const.hpp
libmhwd/vita/: string.cpp  string.hpp
libpci/: Cargo.toml
libpci-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
libpci-sys/src/: lib.rs
libpci/examples/: example1.rs
libpci/src/: lib.rs
libusb/: .gitignore  Cargo.toml
libusb-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
libusb-sys/src/: lib.rs
libusb/examples/: example1.rs
libusb/src/: lib.rs  usb_ids.rs
profiles/pci/ai_sdk/: profiles.toml
profiles/pci/asus_laptops/: profiles.toml
profiles/pci/graphic_drivers/: profiles.toml
profiles/pci/handhelds/: profiles.toml
profiles/pci/network_drivers/: profiles.toml
profiles/pci/power_management/: profiles.toml
profiles/pci/t2-macbook/: profiles.toml
profiles/usb/fprint/: profiles.toml
scripts/: CMakeLists.txt  MHWDCONFIG  chwd  kernel.cpp  kernel.hpp  mhwd  mhwd-fb  mhwd-gpu  mhwd-kernel  mhwd-kernel.cpp  utils.cpp  utils.hpp
scripts/chwd-kernel/: .gitignore  Cargo.toml
scripts/chwd-kernel/src/: kernel.rs  lib.rs  main.rs
scripts/initcpio/hooks/: mhwd-fb
scripts/initcpio/install/: mhwd-fb
scripts/intel-pci-ids-dumper/: intel-pci-ids-dumper.lua
scripts/nvidia-pci-ids-dumper/: nvidia-pci-ids-dumper
src/: CMakeLists.txt  Data.cpp  Mhwd.cpp  Utils.hpp  args.rs  config.cpp  config.hpp  console_writer.cpp  console_writer.hpp  console_writer.rs  consts.rs  data.cpp  data.hpp  data.rs  device.hpp  device.rs  device_misc.rs  enums.hpp  hd.h  hwd_misc.rs  lib.rs  localization.rs  logger.rs  main.cpp  main.rs  mhwd.cpp  mhwd.hpp  misc.rs  profile.rs  profile_misc.rs  transaction.hpp  utils.hpp
tests/: chwd_spec.lua
tests/profiles/: children-profile.toml  cpu-models-no-family-test.toml  cpu-profile-test.toml  extra-check-root-profile.toml  graphic_drivers-invalid-profiles-test.toml  graphic_drivers-profiles-test.toml  inherited-profile.toml  multiple-profile-raw-escaped-strings-test-parsed.toml  multiple-profile-raw-escaped-strings-test.toml  nvidia-test-ids.ids  profile-raw-escaped-strings-test.toml
