[package]
name = "chwd"
version = "1.6.1"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
toml = "0.8"
libpci = { path = "libpci", version = "0.1.0" }
subprocess = "0.2"
colored = "2"
clap = { features = ["derive"], version = "4" }
anyhow = "1"
nix = { features = ["user"], default-features = false, version = "0.29" }
comfy-table = { default-features = false, version = "7" }
regex = "1"
once_cell = { features = ["std"], default-features = false, version = "1" }
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }

[build-dependencies]
clap = { features = ["derive"], version = "4" }
clap_complete = "4"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
