[package]
name = "libhd-sys"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"

description = "Raw bindings for libhd"
homepage = "https://github.com/CachyOS/mhwd-cachyos"
repository = "https://github.com/CachyOS/mhwd-cachyos"
categories = ["api-bindings"]

[dependencies]
libc = { default-features = false, version = "0.2.141" }

[build-dependencies]
bindgen = { version = "0.65.1", default-features = false, features = ["runtime"] }
cc = "1.0.79"

[features]
default = []

std = [] # Use std types instead of libc in bindgen
