[package]
name = "libpci-sys"
version = "0.1.1"
edition = "2021"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
rust-version = "1.81.0"

description = "Raw bindings for libpci"
homepage = "https://github.com/CachyOS/chwd"
repository = "https://github.com/CachyOS/chwd"
categories = ["api-bindings"]

[dependencies]
libc = { default-features = false, version = "0.2" }

[build-dependencies]
bindgen = { version = "0.71", default-features = false, features = ["runtime"] }
cc = "1"

[features]
default = []

std = [] # Use std types instead of libc in bindgen
