[package]
name = "libpci-c-sys"
version = "0.2.0"
edition = "2024"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPL-3.0-only"
rust-version = "1.85.0"

description = "Raw bindings for libpci"
homepage = "https://github.com/CachyOS/chwd"
repository = "https://github.com/CachyOS/chwd"
categories = ["api-bindings"]

[dependencies]
libc = { default-features = false, version = "0.2" }

[build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["runtime"] }
cc = "1"

[features]
default = []

std = [] # Use std types instead of libc in bindgen
