[package]
name = "libusb"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPL-3.0-only"
rust-version = "1.81.0"

description = "Rust bindings for libusb-1.0"
homepage = "https://github.com/CachyOS/chwd"
repository = "https://github.com/CachyOS/chwd"
categories = ["api-bindings"]

[dependencies]
libusb-c-sys = { path = "../libusb-sys", default-features = false, version = "0.1.0" }
libc = { default-features = false, version = "0.2" }

[features]
default = []

std = ["libusb-c-sys/std"]

[[example]]
name = "example1"
