[package]
name = "chwd-kernel"
version = "0.1.0"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
alpm = { default-features = false, version = "3" }
alpm-utils = { features = ["conf"], default-features = false, version = "3" }
pacmanconf = "2"

subprocess = "0.2"
clap = { features = ["derive"], version = "4" }
nix = { features = ["user"], default-features = false, version = "0.28" }
dialoguer = { default-features = false, version = "0.11" }

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
