[package]
name = "chwd-kernel"
version = "1.0.0"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2024"

[dependencies]
alpm = { default-features = false, version = "5" }
alpm-utils = { features = ["conf"], default-features = false, version = "5" }
pacmanconf = "3.1"

subprocess = "1.2"
clap = { features = ["derive"], version = "4" }
nix = { features = ["user"], default-features = false, version = "0.31" }
dialoguer = { default-features = false, version = "0.12" }
itertools = "0.15"

[features]
# AUR kernel discovery
aur = []

[lib]
name = "chwd_kernel"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
